# JPEG-Encoder

./: .gitignore  .gitmodules  BitStream.h  CMakeLists.txt  DiscreteCosinTransform.h  EncodingProcessor.h  HuffmanEncoder.h  HuffmanTree.h  Image.h  LICENSE  MissingFeatures  PPMParser.h  PixelTypes.h  README.md  SampledWriter.h  huf_compress.c  main.cpp  ppmCreator.cpp  ppmCreator.h  ppmCreatorMain.cpp
HuffmenTreeSorts/: HelperStructs.h  HuffmanTree.h  HuffmanTreeIsoSort.h  HuffmanTreeSimpleSort.h  HuffmanTreeSort.h  NoopHuffman.h
TestImagesDeinzer/: 16x16-rot.ppm  31x31-synth.ppm
Vc/lib/cmake/Vc/: VcConfig.cmake
benchmarks/: BitStream.cpp  DCT.cpp  Huffman.cpp  Log2.cpp  VcAdds.cpp
dct/: AbstractCosinusTransform.h  AraiBookCosinusTransform.h  AraiCosinusTransform.h  AraiSimd.h  AraiSimdSimple.h  DirectCosinusTransform.h  DiscreteCosinusTransform.h  SeparatedCosinusTransform.h  SeparatedCosinusTransformGlm.h  SeparatedCosinusTransformSimd.h
helper/: BlockIterator.h  EndianConvert.h  ExampleBufferGen.h  ParallelFor.h  RgbToYCbCr.h  Tests.cpp  Tests.h  TreeEfficiencyMeter.h  parseFloat.cpp  parseFloat.h  tmain.cpp
output/: test_128_random.ppm  test_blocked.ppm  test_gradient.ppm  test_red.ppm  test_red64.ppm
quantisation/: quantisationTables.h  qunatisationTables.h
segments/: APP0.h  DHT.h  DQT.h  SOF0.h  SOS.h
